force-app/main/default/objects/ASF_Bulk_Case_Processor__e/ASF_Bulk_Case_Processor__e.object-meta.xml
<CustomObject>
    <label>Bulk Case Processor</label>
    <pluralLabel>Bulk Case Processors</pluralLabel>
</CustomObject>