force-app/main/default/objects/ASF_Bulk_Case_Processor__e/fields/Header_Row_Id__c.field-meta.xml
<CustomField>
    <fullName>Header_Row_Id__c</fullName>
    <label>Header Row Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>