force-app/main/default/objects/ASF_Bulk_Case_Processor__e/fields/Record_IDs__c.field-meta.xml
<CustomField>
    <fullName>Record_IDs__c</fullName>
    <description>Separates by semicolon</description>
    <label>Record IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>