force-app/main/default/objects/ASF_Bulk_Case_Processor__e/fields/Start_Index__c.field-meta.xml
<CustomField>
    <fullName>Start_Index__c</fullName>
    <label>Start Index</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>